virt01/manual/torrent/slskd/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: slskd-ingress
  namespace: torrent
  annotations:
    cert-manager.io/cluster-issuer: nf-lab
    cert-manager.io/private-key-rotation-policy: Always
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    external-dns.alpha.kubernetes.io/target: traefik.k3s.nf.lab
spec:
  ingressClassName: traefik
  rules:
    - host: slskd.k3s.nf.lab
      http:
        paths:
          - backend:
              service:
                name: slskd-svc
                port:
                  number: 5030
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - slskd.k3s.nf.lab
      secretName: slskd-int-cert-tls
